--- a/cipher_ljt2138/pyproject.toml
+++ b/cipher_ljt2138/pyproject.toml
@@ -10,6 +10,10 @@ readme = "README.md"
 python = "^3.9"
 
 [tool.poetry.dev-dependencies]
+myst-nb = "^0.13.1"
+sphinx-autoapi = "^1.8.4"
+sphinx-rtd-theme = "^1.0.0"
+pytest = "^6.2.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
